--- a/MemoriaFlora/Utils/es.lproj/Localizable.strings
+++ b/MemoriaFlora/Utils/es.lproj/Localizable.strings
@@ -81,7 +81,7 @@
 "Blue Moon" = "Luna azul"; //Nombre de la flor
 "Eden Rose" = "Rosa de Edén"; //Nombre de la flor
 "Pay Tribute" = "Rendir Tributo";
-"Share" = "Compartir";
+"Share" = "Share";
 "Rules" = "Reglas";
 "Policy" = "Política";
 "Loading" = "Cargando";
