--- a/MemoriaFlora/Utils/fr.lproj/Localizable.strings
+++ b/MemoriaFlora/Utils/fr.lproj/Localizable.strings
@@ -81,7 +81,7 @@
 "Blue Moon" = "Lune bleue"; //Nom de la fleur
 "Eden Rose" = "Rose d'Éden"; //Nom de la fleur
 "Pay Tribute" = "Rendre hommage";
-"Share" = "Partager";
+"Share" = "Share";
 "Rules" = "Règles";
 "Policy" = "Politique";
 "Loading" = "Chargement";
