--- a/MemoriaFlora/Utils/it.lproj/Localizable.strings
+++ b/MemoriaFlora/Utils/it.lproj/Localizable.strings
@@ -81,7 +81,7 @@
 "Blue Moon" = "Luna blu"; //Nome del fiore
 "Eden Rose" = "Rosa Eden"; //Nome del fiore
 "Pay Tribute" = "Rendi omaggio";
-"Share" = "Condividi";
+"Share" = "Share";
 "Rules" = "Regole";
 "Policy" = "Politica";
 "Loading" = "Caricamento";
