--- a/MemoriaFlora/Utils/pt-PT.lproj/Localizable.strings
+++ b/MemoriaFlora/Utils/pt-PT.lproj/Localizable.strings
@@ -81,7 +81,7 @@
 "Blue Moon" = "Lua Azul"; //Nome da flor
 "Eden Rose" = "Rosa do Éden"; //Nome da flor
 "Pay Tribute" = "Prestar Homenagem";
-"Share" = "Partilhar";
+"Share" = "Share";
 "Rules" = "Regras";
 "Policy" = "Política";
 "Loading" = "Carregando";
