--- a/MemoriaFlora/Storyboards/en.lproj/Main.strings
+++ b/MemoriaFlora/Storyboards/en.lproj/Main.strings
@@ -51,7 +51,7 @@
 "BKC-2l-J0K.text" = "       ";
 
 /* Class = "UILabel"; text = "Sacred Memories"; ObjectID = "CY1-Mi-V83"; */
-"CY1-Mi-V83.text" = "Sacred Memories";
+"CY1-Mi-V83.text" = "In Memory of";
 
 /* Class = "UILabel"; text = "New user?"; ObjectID = "Cxg-P6-U83"; */
 "Cxg-P6-U83.text" = "New user?";
@@ -87,7 +87,7 @@
 "Mwy-1R-oOI.placeholder" = " Password";
 
 /* Class = "UILabel"; text = "Loving Memory"; ObjectID = "PE6-OV-zbq"; */
-"PE6-OV-zbq.text" = "Loving Memory";
+"PE6-OV-zbq.text" = "In Memory of";
 
 /* Class = "UIButton"; configuration.title = " "; ObjectID = "QU2-qL-dib"; */
 "QU2-qL-dib.configuration.title" = " ";
