Working on localization and dynamic deep links

--- a/MemoriaFlora/Utils/en.lproj/Localizable.strings
+++ b/MemoriaFlora/Utils/en.lproj/Localizable.strings
@@ -85,3 +85,4 @@
 "Rules" = "Rules";
 "Policy" = "Policy";
 "Loading" = "Loading";
+"Condolences Flower Purchase Notification" = "Condolences Flower Purchase Notification";
