--- a/MemoriaFlora/Utils/es.lproj/Localizable.strings
+++ b/MemoriaFlora/Utils/es.lproj/Localizable.strings
@@ -85,3 +85,4 @@
 "Rules" = "Reglas";
 "Policy" = "Política";
 "Loading" = "Cargando";
+"Condolences Flower Purchase Notification" = "Notificación de Compra de Flores de Condolencias";
