--- a/MemoriaFlora/Utils/it.lproj/Localizable.strings
+++ b/MemoriaFlora/Utils/it.lproj/Localizable.strings
@@ -85,4 +85,5 @@
 "Rules" = "Regole";
 "Policy" = "Politica";
 "Loading" = "Caricamento";
+"Condolences Flower Purchase Notification" = "Notifica di Acquisto di Fiori di Condoglianze";
 
