--- a/MemoriaFlora/Utils/pt-PT.lproj/Localizable.strings
+++ b/MemoriaFlora/Utils/pt-PT.lproj/Localizable.strings
@@ -85,3 +85,4 @@
 "Rules" = "Regras";
 "Policy" = "Política";
 "Loading" = "Carregando";
+"Condolences Flower Purchase Notification" = "Condoléances Portuguese: Notificação";
