--- a/MemoriaFlora/Utils/fr.lproj/Localizable.strings
+++ b/MemoriaFlora/Utils/fr.lproj/Localizable.strings
@@ -85,6 +85,7 @@
 "Rules" = "Règles";
 "Policy" = "Politique";
 "Loading" = "Chargement";
+"Condolences Flower Purchase Notification" = "Notification d'Achat de Fleurs de Condoléances";
 
 
 
